# parquet-viewer

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  Trunk.toml  index.html
.github/workflows/: gh-pages-deploy.yml
src/: file_reader.rs  info.rs  info_section.rs  main.rs  metadata.rs  object_store_cache.rs  parquet_reader.rs  query_input.rs  query_results.rs  row_group.rs  row_group_column.rs  row_group_section.rs  schema.rs  schema_section.rs  settings.rs
utils/: parquet-viewer.py
