[package]
name = "parquet-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "53.2.0", features = ["prettyprint"] }
arrow-schema = { version = "53.2.0" }
arrow-array = { version = "53.2.0" }
bytes = "1.8.0"
console_error_panic_hook = "0.1.7"
datafusion = { version = "42.2.0", default-features = false }
leptos = { version = "0.6.15", features = ["csr", "nightly"] }
parquet = { version = "53.2.0", features = [
	"arrow",
	"snap",
	"flate2",
	"lz4",
	"async",
	# "zstd", // won't work on wasm
], default-features = false }
serde_json = "1.0.132"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = [
	"HtmlInputElement",
	"FileList",
	"File",
] }
chrono = { version = "0.4", features = ["wasmbind"] }
futures = "0.3.31"
