[package]
name = "parquet-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "53.2.0", default-features = false }
arrow-schema = { version = "53.2.0", default-features = false }
arrow-array = { version = "53.2.0", default-features = false }
bytes = "1.8.0"
console_error_panic_hook = "0.1.7"
datafusion = { version = "42.2.0", default-features = false }
leptos = { version = "0.6.15", features = ["csr", "nightly"] }
parquet = { version = "53.2.0", features = [
	"arrow",
	"snap",
	"flate2",
	"lz4",
	"async",
	"zstd",
], default-features = false }
serde_json = "1.0.132"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = [
	"HtmlInputElement",
	"FileList",
	"File",
] }
chrono = { version = "0.4", features = ["wasmbind"] }
futures = "0.3.31"
zstd = { version = "*", features = ["wasm", "thin"], default-features = false }
zstd-sys = { version = "=2.0.9", default-features = false }

[profile.release]
strip = true
opt-level = "z"
# lto = true
panic = "abort"
