[package]
name = "parquet-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "53.2.0", default-features = false }
arrow-schema = { version = "53.2.0", default-features = false }
arrow-array = { version = "53.2.0", default-features = false }
bytes = "1.8.0"
console_error_panic_hook = "0.1.7"
datafusion = { version = "42.2.0", default-features = false, features = [
	"parquet",
] }
leptos = { version = "0.7", features = ["csr", "nightly"] }
parquet = { version = "53.2.0", features = [
	"arrow",
	"snap",
	"flate2",
	"lz4",
	"async",
	"zstd",
], default-features = false }
serde_json = "1.0.132"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = [
	"HtmlInputElement",
	"FileList",
	"File",
	"Storage",
	"Window",
	"Navigator",
	"Clipboard",
] }
chrono = { version = "0.4", features = ["wasmbind"] }
futures = "0.3.31"
zstd = { version = "*", features = ["wasm", "thin"], default-features = false }
zstd-sys = { version = "=2.0.9", default-features = false }
serde = { version = "1.0" }
opendal = { version = "0.51.0", default-features = false, features = [
	"services-s3",
	"services-http",
] }
# object_store_opendal = { path = "../opendal/integrations/object_store", features = [
# 	"send_wrapper",
# ] }
leptos_router = { version = "0.7.0", features = ["nightly"] }
object_store = "0.11.1"
async-trait = "0.1.83"

[profile.release]
strip = true
opt-level = "s"
# lto = true
panic = "abort"
